# financial-lines-daily-briefing

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-briefing.yml
briefing/: __init__.py  config.py  emailer.py  generate.py  main.py  news.py
tests/: test_emailer.py  test_main.py  test_news.py
