[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-lines-daily-briefing"
version = "0.1.0"
description = "Automated Financial Lines pricing intelligence email"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["briefing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
